<resources>
    <string name="app_name">Tic-Tac-Toe JR</string>
    <string name="new_game">New Game</string>
    <string name="random">RANDOM</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="todo">TODO</string>
    <string name="reset">reset</string>
    <string name="_00">00</string>
    <string name="_22">22</string>
    <string name="_21">21</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_02">02</string>
    <string name="_12">12</string>
    <string name="_01">01</string>
    <string name="_20">20</string>
    <string name="player_2_0">Player 2: 0</string>
    <string name="player_1_0">Player 1: 0</string>
    <string name="percent_category_title">percent_category_title</string>
    <string name="forget_remember_title">forget_remember_title</string>
    <string name="forget_remember_summary">forget_remember_summary</string>
    <string name="default_percent_title">default_percent_title</string>
    <string name="default_percent_summary">default_percent_summary</string>
    <string name="default_percent_default">default_percent_default</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="testback">testBack</string>
    <string name="please_input_player_1_s_name">Please input Player 1\'s name:</string>
    <string name="please_input_player_2_s_name">Please input Player 2\'s name:</string>
    <string name="please_input_a_name_for_player_1">Please input a name for Player 1 :</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="please_input_a_name_for_player_2">Please input a name for Player 2 :</string>
    <string name="save">Save</string>
    <string name="player_2a">Player 2 :</string>
    <string name="player_1a">Player 1 :</string>
</resources>